Fix entity view history buttons getting squashed in IE

--- a/src/scss/entityView/entityView.scss
+++ b/src/scss/entityView/entityView.scss
@@ -288,6 +288,7 @@
 .header-wrapper .history-buttons {
   grid-column-start: 4;
   -ms-grid-column: 4;
+  -ms-grid-column-span: 2;
   grid-row-start: 2;
   -ms-grid-row: 2;
 
